--- a/Task6.html
+++ b/Task6.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -15,7 +14,12 @@
             margin: 20px;
             height: 50%;
             width: 50%;
-            background-color: white;
+            background-color: rgba(220, 220, 220, 0.427);
+        }
+
+        /* Add this style to make all input fields and the submit button the same size */
+        .form-control {
+            height: 50px;
         }
     </style>
 </head>
@@ -23,7 +27,7 @@
 <body>
     <center>
         <div class="c1">
-            <form class="was-validated" action="https://www.google.com" onclick="">
+            <form id="myForm" action="https://www.google.com">
                 <div class="form-group text-start mb-4 ms-4 me-4">
                     <label for="form-group">Name</label>
                     <input type="text" class="form-control" required>
@@ -35,31 +39,56 @@
                     <input type="email" class="form-control" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Email is required</div>
-                    <div class="form-group text-start mb-4 ms-1 me-8">
-                        <label for="formGroupExampleInput2">Password</label>
-                        <input type="password" class="form-control" required>
-                        <div class="valid-feedback">Valid.</div>
-                        <div class="invalid-feedback">Password is required</div>
-                    </div>
-                    <div class="form-group text-start mb-4 ms-2 me-6">
-                        <label for="formGroupExampleInput2">Hobbies</label>
-                        <br>
-                        <select style="width: 100%; height:37px">
-                            <option></option>
-                            <option>Cricket</option>
-                            <option>Movies</option>
-                            <option>Singing</option>
-                            <option>Dancing</option>
-                            <option>Cooking</option>
-                            <option>Swimming</option>
-                            <option>Reading</option>
-                        </select>
-                    </div>
-                    <div class="form-group text-start mb-4 ms-2 me-6">
-                        <input type="button" class="form-control bt bg-danger text-white" id="formGroupExampleInput2"
-                            value="Submit">
+                </div>
+                <div class="form-group text-start mb-4 ms-1 me-8">
+                    <label for="formGroupExampleInput2">Password</label>
+                    <input type="password" class="form-control" required>
+                    <div class="valid-feedback">Valid.</div>
+                    <div class="invalid-feedback">Password is required</div>
+                </div>
+                <div class="form-group text-start mb-4 ms-2 me-6">
+                    <label for="formGroupExampleInput2">Hobbies</label>
+                    <br>
+                    <select style="width: 100%; height:50px">
+                        <option></option>
+                        <option>Cricket</option>
+                        <option>Movies</option>
+                        <option>Singing</option>
+                        <option>Dancing</option>
+                        <option>Cooking</option>
+                        <option>Swimming</option>
+                        <option>Reading</option>
+                    </select>
 
+                <!-- Submit button -->
+                </div>
 
-                    </div>
+                <!-- Submit button -->
+                <div class="form-group text-start mb-4 ms-2 me-6">
+                    <input type="button" class="form-control bt bg-danger text-white" id="submitBtn"
+                        value="Submit">
+                </div>
+
             </form>
+
+            <!-- Form validation script -->
+            <script>
+                document.getElementById('submitBtn').addEventListener('click', function() {
+                    var form = document.getElementById('myForm');
+                    if (form.checkValidity()) {
+                        // If the form is valid, submit it
+                        form.submit();
+                    } else {
+                        // If the form is invalid, add 'was-validated' class to show validation feedback
+                        form.classList.add('was-validated');
+                    }
+                });
+            </script>
+
         </div>
+
+    </center>
+
+</body>
+
+</html> 
